; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_otrx.c_otrx_create_append_zeros.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_otrx.c_otrx_create_append_zeros.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEM = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Couldn't write %zu B to %s\0A\00", align 1
@trx_path = common dso_local global i32 0, align 4
@EIO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64)* @otrx_create_append_zeros to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @otrx_create_append_zeros(i32* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32* @malloc(i64 %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i64, i64* @ENOMEM, align 8
  %13 = sub i64 0, %12
  store i64 %13, i64* %3, align 8
  br label %37

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @memset(i32* %15, i32 0, i64 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i64 @fwrite(i32* %18, i32 1, i64 %19, i32* %20)
  %22 = load i64, i64* %5, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %33

24:                                               ; preds = %14
  %25 = load i32, i32* @stderr, align 4
  %26 = load i64, i64* %5, align 8
  %27 = load i32, i32* @trx_path, align 4
  %28 = call i32 @fprintf(i32 %25, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %26, i32 %27)
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @free(i32* %29)
  %31 = load i64, i64* @EIO, align 8
  %32 = sub i64 0, %31
  store i64 %32, i64* %3, align 8
  br label %37

33:                                               ; preds = %14
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @free(i32* %34)
  %36 = load i64, i64* %5, align 8
  store i64 %36, i64* %3, align 8
  br label %37

37:                                               ; preds = %33, %24, %11
  %38 = load i64, i64* %3, align 8
  ret i64 %38
}

declare dso_local i32* @malloc(i64) #1

declare dso_local i32 @memset(i32*, i32, i64) #1

declare dso_local i64 @fwrite(i32*, i32, i64, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i64, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
